--- a/front_end/react_app/package.json
+++ b/front_end/react_app/package.json
@@ -11,7 +11,8 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
